--- a/client/package.json
+++ b/client/package.json
@@ -6,26 +6,42 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.5.3",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.6.1",
+    "prettier": "^2.5.1",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^7.2.8",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "serve": "^13.0.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint:fix": "eslint --ext .js,.jsx,.mdx . --fix",
+    "stylelint:fix": "stylelint \"**/*.scss\" --fix"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
+    ]
+  },
+  "lint-staged": {
+    "*.{js,jsx,mdx}": [
+      "pnpm lint:fix",
+      "git add"
+    ],
+    "*.scss": [
+      "pnpm stylelint:fix",
+      "git add"
     ]
   },
   "browserslist": {
@@ -41,6 +57,16 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.12.0"
-  }
+    "eslint": "^7.8.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-jsx-control-statements": "^2.2.1",
+    "eslint-plugin-mdx": "^1.8.2",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
+    "lint-staged": "^10.3.0"
+  },
+  "main": "index.js",
+  "license": "MIT"
 }
