--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint:fix": "eslint --ext .js,.jsx,.mdx . --fix",
-    "stylelint:fix": "stylelint \"**/*.scss\" --fix"
+    "lint": "eslint --ext .js,.jsx,.mdx . --fix",
+    "stylelint": "stylelint \"**/*.scss\" --fix"
   },
   "eslintConfig": {
     "extends": [
