--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^0.27.2",
     "prettier": "^2.5.1",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
